[package]
name = "vtf"
description = "Valve Texture format library for Rust"
version = "0.1.6"
license = "MIT"
authors = ["Roman Shishkin <spark@uwtech.org>", "Robin Appelman <robin@icewind.nl>"]
repository = "https://github.com/roman901/vtf-rs"
edition = "2021"

[dependencies]
image = "0.24.5"
err-derive = "0.3.1"
parse-display = "0.6.0"
num_enum = "0.5.7"
byteorder = "1.4.3"
squish = "1.0.0"
